# News-Sentiment-Analysis

./: .gitignore  Dockerfile  cronjob  main.py  pyproject.toml
.github/workflows/: main.yml
app/config/: logger.py  settings.py
app/data/analyzed/2024/08/24/: headlines_with_sentiment.csv
app/data/analyzed/2024/08/25/: headlines_with_sentiment.csv
app/data/analyzed/2024/08/26/: headlines_with_sentiment.csv
app/data/analyzed/2024/08/27/: headlines_with_sentiment.csv
app/data/analyzed/2024/08/28/: headlines_with_sentiment.csv
app/data/analyzed/2024/08/29/: headlines_with_sentiment.csv
app/data/analyzed/2024/08/30/: headlines_with_sentiment.csv
app/data/analyzed/2024/08/31/: headlines_with_sentiment.csv
app/data/analyzed/2024/09/01/: headlines_with_sentiment.csv
app/data/analyzed/2024/09/02/: headlines_with_sentiment.csv
app/data/analyzed/2024/09/03/: headlines_with_sentiment.csv
app/data/analyzed/2024/09/04/: headlines_with_sentiment.csv
app/data/analyzed/2024/09/05/: headlines_with_sentiment.csv
app/data/analyzed/2024/09/06/: headlines_with_sentiment.csv
app/data/analyzed/2024/09/07/: headlines_with_sentiment.csv
app/data/analyzed/2024/09/08/: headlines_with_sentiment.csv
app/data/analyzed/2024/09/09/: headlines_with_sentiment.csv
app/data/analyzed/2024/09/10/: headlines_with_sentiment.csv
app/data/analyzed/2024/09/11/: headlines_with_sentiment.csv
app/data/analyzed/2024/09/12/: headlines_with_sentiment.csv
app/data/analyzed/2024/09/13/: headlines_with_sentiment.csv
app/data/analyzed/2024/09/14/: headlines_with_sentiment.csv
app/data/analyzed/2024/09/15/: headlines_with_sentiment.csv
app/data/analyzed/2024/09/16/: headlines_with_sentiment.csv
app/data/raw/: scraping_timestamp.txt
app/scripts/: process_data.py  process_headlines.py  scrape_headlines.py  sentiment_analysis.py
(+959 files in other folders)
